# video-to-terminal

./: .gitignore  README.md
.github/workflows/: cmake-multi-platform.yml
src/: BinaryUtils.cpp  BinaryUtils.hpp  BitStream.cpp  BitStream.hpp  CMakeLists.txt  CharInfo.cpp  CharInfo.hpp  CharInfoStruct.hpp  Fraction.cpp  Fraction.hpp  SmartPtr.cpp  SmartPtr.hpp  VTDIDecoder.cpp  VTDIDecoder.hpp  VariousUtils.cpp  VariousUtils.hpp  VideoTranscoder.cpp  VideoTranscoder.hpp  binaryUtils.cpp  binaryUtils.hpp  charInfo.cpp  decoder_main.cpp  main.cpp  transcoder_main.cpp
src/decoder/: VTDIDecoder.cpp  VTDIDecoder.hpp  main.cpp  vtdidecoder.cpp  vtdidecoder.hpp
src/img-viewer/: imgviewer.cpp  imgviewer.hpp  main.cpp
src/imgViewer/: ImgViewer.cpp  ImgViewer.hpp  main.cpp
src/libs/: CharInfoStruct.hpp  VariousUtils.cpp  VariousUtils.hpp  _kbhit.cpp  _kbhit.h  _kbhit.hpp  binaryutils.cpp  binaryutils.hpp  charinfo.hpp  img2cimat.cpp  img2cimat.hpp  termutils.cpp  termutils.hpp  variousutils.cpp  variousutils.hpp
src/media-viewer/: main.cpp  mediaviewer.cpp  mediaviewer.hpp
src/transcoder/: VideoTranscoder.cpp  VideoTranscoder.hpp  main.cpp  transcoder_main.cpp  videotranscoder.cpp  videotranscoder.hpp
