cmake_minimum_required(VERSION 3.5)
set(CMAKE_CXX_STANDARD 20)
set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread" )
project( Transcoder )
project( Decoder )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )

add_executable( Transcoder transcoder/transcoder_main.cpp transcoder/VideoTranscoder.cpp libs/BinaryUtils.cpp libs/VariousUtils.cpp )
#target_compile_options( Transcoder PRIVATE -pg )
#target_link_options( Transcoder PRIVATE -pg )
target_link_libraries( Transcoder stdc++fs ${OpenCV_LIBS} )

add_executable( Decoder decoder/decoder_main.cpp decoder/VTDIDecoder.cpp libs/BinaryUtils.cpp libs/VariousUtils.cpp )
#target_compile_options( Decoder PRIVATE -pg -fsanitize=address )
#target_link_options( Decoder PRIVATE -pg -fsanitize=address )
target_link_libraries( Decoder stdc++fs )

add_executable( ImgViewer imgViewer/main.cpp imgViewer/ImgViewer.cpp libs/VariousUtils.cpp )
target_link_libraries( ImgViewer stdc++fs ${OpenCV_LIBS} )
